Client verification scripts

--- a/TgyAspNetCoreApp.Web/Views/Products/Add.cshtml
+++ b/TgyAspNetCoreApp.Web/Views/Products/Add.cshtml
@@ -95,3 +95,10 @@
      
     <button type="submit" class="btn btn-primary"> Save Product </button>
 </form>
+
+
+@section Scripts
+{
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
