--- a/TgyAspNetCoreApp.Web/Views/_ViewImports.cshtml
+++ b/TgyAspNetCoreApp.Web/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using TgyAspNetCoreApp.Web.Models
 @using TgyAspNetCoreApp.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *,TgyAspNetCoreApp.Web
