--- a/TgyAspNetCoreApp.Web/Views/Shared/_HeaderPartialView.cshtml
+++ b/TgyAspNetCoreApp.Web/Views/Shared/_HeaderPartialView.cshtml
@@ -17,6 +17,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Visitor">Visitors</a>
+                    </li>
                 </ul>
             </div>
         </div>
