--- a/TgyAspNetCoreApp.Web/Views/Products/Index.cshtml
+++ b/TgyAspNetCoreApp.Web/Views/Products/Index.cshtml
@@ -20,6 +20,7 @@
     <thead>
         <tr>
             <th>Id</th>
+            <th>Image</th>
             <th>Name</th>
             <th>Price</th>
             <th>Stock</th>
@@ -35,8 +36,18 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
+            <tr class="align-middle">
                 <td>@item.Id</td>
+                <td>
+                    @if (!String.IsNullOrEmpty(item.ImagePath))
+                    {
+                        <img style="width:100px; height:100px;" src="/images/@(item.ImagePath)"/>
+                    }
+                    else
+                    {
+                        <img style="width:100px; height:100px;" src="/images/noimage.png" />
+                    }
+                </td>
                 <td>@item.Name</td>
                 <td>@item.Price</td>
                 <td>@item.Stock</td>
