4.Ders Son bölüm

--- a/TgyAspNetCoreApp.Web/Views/Products/Index.cshtml
+++ b/TgyAspNetCoreApp.Web/Views/Products/Index.cshtml
@@ -21,6 +21,7 @@
         <tr>
             <th>Id</th>
             <th>Image</th>
+            <th>Category</th>
             <th>Name</th>
             <th>Price</th>
             <th>Stock</th>
@@ -48,6 +49,7 @@
                         <img style="width:100px; height:100px;" src="/images/noimage.png" />
                     }
                 </td>
+                <td>@item.CategoryName</td>
                 <td>@item.Name</td>
                 <td>@item.Price</td>
                 <td>@item.Stock</td>
